[gd_scene load_steps=2 format=3 uid="uid://bj5o5mbqcjlvs"]

[ext_resource type="Script" path="res://Scenes/objects/spike_parent.gd" id="1_rhiph"]

[node name="SpikeParent" type="Node2D"]
script = ExtResource("1_rhiph")

[node name="ActivateSpikeNoise" type="AudioStreamPlayer2D" parent="."]

[node name="DeactivateSpikeNoise" type="AudioStreamPlayer2D" parent="."]
